--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.21",
     "mailgen": "^2.0.14",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -47,6 +48,7 @@
     "@types/lodash": "^4.14.168",
     "@types/mailgen": "^2.0.3",
     "@types/module-alias": "^2.0.0",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
