use server's installed mongo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
 services:
-    mongo:
-        image: mongo
-        ports:
-            - 27017:27018
-        volumes:
-            - mongodb:/data/db
+    # mongo:
+    #     image: mongo
+    #     ports:
+    #         - 27017:27018
+    #     volumes:
+    #         - mongodb:/data/db
     hotel_manage_server:
         restart: always
         build:
@@ -19,5 +19,5 @@ services:
             - NODE_ENV=production
         ports:
             - '8008:8008'
-volumes:
-    mongodb:
+# volumes:
+# mongodb:
